--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
-    {% include_cached skip-links.html %}
+    {% include_cached skip-links.html lang=page.lang %}
     {% include_cached browser-upgrade.html %}
     {% include_cached masthead.html lang=page.lang ref=page.ref %}
 
@@ -25,14 +25,14 @@
 
     {% if site.search == true %}
       <div class="search-content">
-        {% include_cached search/search_form.html %}
+        {% include_cached search/search_form.html lang=page.lang %}
       </div>
     {% endif %}
 
     <div id="footer" class="page__footer">
       <footer>
         {% include footer/custom.html %}
-        {% include_cached footer.html %}
+        {% include_cached footer.html lang=page.lang %}
       </footer>
     </div>
 
