--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -16,11 +16,11 @@
   {%- assign search_provider = site.search_provider | default: "lunr" -%}
   {%- case search_provider -%}
     {%- when "lunr" -%}
-      {% include_cached search/lunr-search-scripts.html %}
+      {% include_cached search/lunr-search-scripts.html lang= page.lang %}
     {%- when "google" -%}
-      {% include_cached search/google-search-scripts.html %}
+      {% include_cached search/google-search-scripts.html lang=page.lang %}
     {%- when "algolia" -%}
-      {% include_cached search/algolia-search-scripts.html %}
+      {% include_cached search/algolia-search-scripts.html lang=page.lang %}
   {%- endcase -%}
 {% endif %}
 
