--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -41,7 +41,7 @@
         </button>
         <ul class="hidden-links hidden"></ul>
 
-        {% include language-selector.html lang=include.lang ref=include.ref %}
+        {% include language-selector.html lang=include.lang id=include.id %}
 
       </nav>
     </div>
