--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -12,7 +12,7 @@
           {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
         </a>
         <ul class="visible-links">
-          {%- for link in site.data.navigation[site.locale].main -%}
+          {%- for link in site.data.navigation[page.locale].main -%}
             {%- if link.url contains '://' -%}
               {%- assign url = link.url -%}
             {%- else -%}
