--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,9 @@
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/css/visited.css' | relative_url }}">
 
+<!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
+
 <!--[if IE]>
   <style>
     /* old IE unsupported flexbox fixes */
