--- a/_includes/nav_list.html
+++ b/_includes/nav_list.html
@@ -1,4 +1,8 @@
-{% assign navigation = site.data.navigation[include.nav] %}
+{% if page.locale == "pl-PL" %}
+  {% assign navigation = site.data['navigation-pl'][include.nav] %}
+{% else %}
+  {% assign navigation = site.data['navigation-en'][include.nav] %}
+{% endif %}
 
 <nav class="nav__list">
   {% if page.sidebar.title %}<h3 class="nav__title" style="padding-left: 0;">{{ page.sidebar.title }}</h3>{% endif %}
