--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -7,8 +7,14 @@
         {% unless logo_path == empty %}
           <a class="site-logo" href="{{ '/' | relative_url }}"><img src="{{ logo_path | relative_url }}" alt=""></a>
         {% endunless %}
+        {% comment %}
         <a class="site-title" href="{% if page.locale == 'pl-PL' %}/pl/{% elsif page.locale == 'en-US' %}/en/{% else %}/{% endif %}">
           {{ site.masthead_title | default: site.title }}
+          {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
+        </a>
+        {% endcomment %}
+        <a class="site-title" href="{% if page.locale == 'pl-PL' %}/pl/{% elsif page.locale == 'en-US' %}/en/{% else %}/{% endif %}">
+          <span class="title-colored"><span class="n">N</span>ull<span class="m">M</span>istrz</span>
           {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
         </a>
         <ul class="visible-links">
