--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,16 @@
     {% if site.footer.links %}
       {% for link in site.footer.links %}
         {% if link.label and link.url %}
-          <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
+          <li>
+            <a href="{{ link.url }}" rel="nofollow noopener noreferrer">
+              {% if link.icon contains '.svg' %}
+                <img src="{{ link.icon }}" alt="{{ link.label }}" style="height:1em;vertical-align:middle;" />
+              {% else %}
+                <i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i>
+              {% endif %}
+              {{ link.label }}
+            </a>
+          </li>
         {% endif %}
       {% endfor %}
     {% endif %}
