poprawka linku do twittera

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -93,8 +93,8 @@
 
       {% if author.serwisx %}
         <li>
-          <a href="https://x.com/{{ author.serwisx }}" itemprop="sameAs" rel="nofollow noopener noreferrer">
-            <svg class="fa-x-svg fa-fw" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" aria-label="Serwis X" role="img"><rect width="120" height="120" fill="#000"/><path d="M87.6 22.5H104L76.2 56.2 108 97.5H83.7L63.9 72.2 41.7 97.5H25.3L54.1 61.6 23 22.5h25.9l17.1 22.1 21.6-22.1zm-4.3 67.2h7.2L36.7 29.7h-7.7l54.3 60z" fill="#fff"/></svg> Serwis X
+          <a href="https://twitter.com/{{ author.twitter }}" itemprop="sameAs" rel="nofollow noopener noreferrer">
+            <i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Serwis X
           </a>
         </li>
       {% endif %}
