--- a/_includes/nav_list.html
+++ b/_includes/nav_list.html
@@ -9,6 +9,7 @@
   <input id="ac-toc" name="accordion-toc" type="checkbox" />
   <label for="ac-toc">{{ site.data.ui-text[site.locale].menu_label | default: "Toggle Menu" }}</label>
   <ul class="nav__items">
+
     {% for nav in navigation %}
       <li>
         {% if nav.url %}
@@ -19,7 +20,14 @@
             {% assign nav_url = nav.url | relative_url %}
           {% endif %}
 
-          <a href="{{ nav_url }}"><span class="nav__sub-title">{{ nav.title }}</span></a>
+          {%- assign page_url_normalized = page.url | append: "/" -%}
+          {%- assign nav_url_normalized = nav.url | append: "/" -%}
+          {% if page_url_normalized == nav_url_normalized or page.url == nav.url or page.url == nav_url %}
+            {% assign active = "active" %}
+          {% else %}
+            {% assign active = "" %}
+          {% endif %}
+          <a href="{{ nav_url }}" class="{{ active }}"><span class="nav__sub-title">{{ nav.title }}</span></a>
         {% else %}
           <span class="nav__sub-title">{{ nav.title }}</span>
         {% endif %}
